# models/programa_academico.go
@@ -5,9 +5,9 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type ProgramaAcademico struct {
@@ -21,6 +21,7 @@ type ProgramaAcademico struct {
 	Duracion                 float64         `orm:"column(duracion)"`
 	UnidadTiempo             int             `orm:"column(unidad_tiempo)"`
 	NucleoBasicoConocimiento int             `orm:"column(nucleo_basico_conocimiento);null"`
+	FechaCreacion            string          `orm:"column(fecha_creacion);null"`
 	FechaModificacion        string          `orm:"column(fecha_modificacion);null"`
 }
 
@@ -35,9 +36,8 @@ func init() {
 // AddProgramaAcademico insert a new ProgramaAcademico into database and returns
 // last inserted Id on success.
 func AddProgramaAcademico(m *ProgramaAcademico) (id int64, err error) {
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -133,9 +133,7 @@ func GetAllProgramaAcademico(query map[string]string, fields []string, sortby []
 func UpdateProgramaAcademicoById(m *ProgramaAcademico) (err error) {
 	o := orm.NewOrm()
 	v := ProgramaAcademico{Id: m.Id}
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
