# swagger/swagger.yml
@@ -72,7 +72,7 @@ paths:
       tags:
       - metodologia
       description: get Metodologia by id
-      operationId: MetodologiaController.Get
+      operationId: MetodologiaController.Get One
       parameters:
       - in: path
         name: id
@@ -84,13 +84,13 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Metodologia'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - metodologia
       description: update the Metodologia
-      operationId: MetodologiaController.Update
+      operationId: MetodologiaController.Put
       parameters:
       - in: path
         name: id
@@ -108,8 +108,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Metodologia'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - metodologia
@@ -187,7 +187,7 @@ paths:
       tags:
       - nivel_formacion
       description: get NivelFormacion by id
-      operationId: NivelFormacionController.Get
+      operationId: NivelFormacionController.Get One
       parameters:
       - in: path
         name: id
@@ -205,7 +205,7 @@ paths:
       tags:
       - nivel_formacion
       description: update the NivelFormacion
-      operationId: NivelFormacionController.Update
+      operationId: NivelFormacionController.Put
       parameters:
       - in: path
         name: id
@@ -278,8 +278,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.ProgramaAcademico'
-        "404":
-          description: not found resource
+        "400":
+          description: the request contains incorrect syntax
     post:
       tags:
       - programa_academico
@@ -302,7 +302,7 @@ paths:
       tags:
       - programa_academico
       description: get ProgramaAcademico by id
-      operationId: ProgramaAcademicoController.Get
+      operationId: ProgramaAcademicoController.Get One
       parameters:
       - in: path
         name: id
@@ -314,13 +314,13 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.ProgramaAcademico'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - programa_academico
       description: update the ProgramaAcademico
-      operationId: ProgramaAcademicoController.Update
+      operationId: ProgramaAcademicoController.Put
       parameters:
       - in: path
         name: id
@@ -338,8 +338,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.ProgramaAcademico'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - programa_academico
@@ -417,7 +417,7 @@ paths:
       tags:
       - titulacion
       description: get Titulacion by id
-      operationId: TitulacionController.Get
+      operationId: TitulacionController.Get One
       parameters:
       - in: path
         name: id
@@ -429,13 +429,13 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Titulacion'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - titulacion
       description: update the Titulacion
-      operationId: TitulacionController.Update
+      operationId: TitulacionController.Put
       parameters:
       - in: path
         name: id
@@ -482,6 +482,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
       Id:
@@ -501,6 +503,8 @@ definitions:
       CodigoAbreviacion:
         type: string
       Descripcion:
+        type: string
+      FechaCreacion:
         type: string
       FechaModificacion:
         type: string
@@ -522,6 +526,8 @@ definitions:
       Duracion:
         type: number
         format: double
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
       Id:
@@ -554,6 +560,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
       Id:
@@ -573,7 +581,7 @@ tags:
     oprations for NivelFormacion
 - name: titulacion
   description: |
-    oprations for Titulacion
+    TitulacionController operations for Titulacion
 - name: programa_academico
   description: |
     oprations for ProgramaAcademico
